--- a/package.json
+++ b/package.json
@@ -3,21 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "create-tables": "node ./utils/createTables.mjs",
+    "seed": "node ./utils/seedDatabase.mjs",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.15.0",
+    "lodash": "^4.17.21",
+    "lucide-react": "^0.469.0",
+    "marked": "^15.0.4",
+    "mysql2": "^3.12.0",
+    "next": "15.1.2",
+    "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.2"
+    "react-intersection-observer": "^9.14.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "@eslint/eslintrc": "^3",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
-    "@eslint/eslintrc": "^3"
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
