--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "framer-motion": "^11.15.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
